gui_dep = declare_dependency(link_with: static_library(
	'gui',
	sources: files(
		'interface/Appearance.cpp',
		'interface/Button.cpp',
		'interface/Checkbox.cpp',
		'interface/Component.cpp',
		'interface/ContextMenu.cpp',
		'interface/DropDown.cpp',
		'interface/Engine.cpp',
		'interface/Label.cpp',
		'interface/Panel.cpp',
		'interface/ProgressBar.cpp',
		'interface/ScrollPanel.cpp',
		'interface/Slider.cpp',
		'interface/Spinner.cpp',
		'interface/Textbox.cpp',
		'interface/TextWrapper.cpp',
		'interface/Window.cpp',
		'Style.cpp',
		'dialogues/ConfirmPrompt.cpp',
		'dialogues/ErrorMessage.cpp',
		'dialogues/InformationMessage.cpp',
		'dialogues/SaveIDMessage.cpp',
		'dialogues/TextPrompt.cpp',
	),
	dependencies: [
		project_dep,
		use_tpt_libs ? tpt_libs.get_variable('sdl2_dep') : dependency('sdl2', static: uopt_static == 'system'),
	],
	include_directories: project_inc,
	cpp_args: project_cpp_arg,
))
